se añadió un boton en activiy main para ver el cambio en git y se añadio el string del boton

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">My Application</string>
+    <string name="boton_prueba_cambio_git">PRUEBA CAMBIO GIT</string>
 </resources>
