Se sube icono de la app y se crea splash screen de inicio

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <string name="app_name">My Application</string>
     <string name="boton_prueba_cambio_git">PRUEBA CAMBIO GIT</string>
+    <string name="titulo_app">Kaiman Ventas que Valen</string>
+
 </resources>
