Se crean la pantalla de crear registro, formularios de usuarios, y se estable rotación de pantalla para splash screen y pantalla de inicio

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,5 +6,8 @@
     <string name="solicitud_de_contraseña">Ingrese su contraseña</string>
     <string name="boton_invitadx">Ingresa como invitado/a</string>
     <string name="boton_inicioSesion">INICIAR SESIÓN</string>
+    <string name="titulo_crearRegistro">SELECCIONA EL PERFIL DE USUARIO A CREAR</string>
+    <string name="nuevo_cliente">NUEVO CLIENTE</string>
+    <string name="nuevo_vendedor">NUEVO VENDEDOR</string>
 
 </resources>
