Se crea la apk de la aplicacion, se crea mvvm para inicio de sesión

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,5 +11,6 @@
     <string name="nuevo_vendedor">NUEVO VENDEDOR</string>
     <string name="titulo_formulario">FORMULARIO NUEVO CLIENTE</string>
     <string name="boton_guardar_datos">GUARDAR</string>
+    <string name="visualizarStock">Visualizar Stock</string>
 
 </resources>
