--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -26,4 +26,10 @@
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
 
+    <string name="textoRealizarPedido">Realizar Pedido</string>
+    <string name="SolicitudNumero">Ingresa tu número</string>
+    <string name="TextoGuiaNúmero">Teléfono fijo: código de área + número. Celular: 9 + número</string>
+    <string name="SeleccionDireccion">Seleciona tu dirección</string>
+    <string name="BotonAñadir">Añadir</string>
+
 </resources>
